<resources>
    <string name="app_name">COVID-19 Manager</string>
    <string name="oib" translatable="false">OIB (11-znamenkasti broj)</string>
    <string name="id" translatable="false">ID (4-znamenkasti broj)</string>
    <string name="login">Prijavi se</string>

    <string name="send_to_epidemiologist">Pošalji poruku epidemiologu</string>
    <string name="message">Poruka</string>
    <string name="message_sent">Poruka uspješno poslana!</string>
    <string name="sending_message_failed">Slanje poruke nije uspjelo, pokušajte ponovno.</string>

    <!--    ERROR MESSAGES    -->
    <string name="eleven_error">Broj mora sadržavati 11 znamenki!</string>
    <string name="four_error">Broj mora sadržavati 4 znamenke!</string>
    <string name="mandatory_field_error">Ovo polje je obavezno!</string>
    <string name="oib_error">Unijeli ste netočan OIB!</string>
    <string name="id_error">Unijeli ste netočan ID!</string>
    <string name="connection_error">Dogodila se pogreška, molimo provjerite svoju internetsku vezu!</string>
    <string name="temperature_error">Molimo unesite valjanu vrijednost!</string>
    <string name="less_than_3h_between_states">Prošlo je manje od 3 sata od zadnjeg unosa stanja!</string>

    <!--  ALERT MESSAGES  -->
    <string name="gps_network_not_enabled">Potrebna je lokacija uređaja!</string>
    <string name="calling_not_enabled">Za poziv je potrebna dozvola!</string>
    <string name="open_location_settings">Postavke lokacije</string>
    <string name="cancel">Odustani</string>
    <string name="log_out_message">Jeste li sigurni da se želite odjaviti?</string>
    <string name="log_out">Odjavi me</string>
    <string name="medical_records_empty">Ne postoji niti jedno unešeno stanje.</string>
    <string name="medical_records_error">Nije moguće dohvatiti povijest stanja.</string>

    <string name="state_title">Stanje na dan </string>
    <string name="temperature_text">Temperatura</string>
    <string name="temperature_hint_text">npr. 37.5</string>
    <string name="cough_text">Kašalj</string>
    <string name="fatigue_text">Umor</string>
    <string name="muscle_pain_text">Bol u mišićima</string>
    <string name="submit_btn_text">Pošalji stanje</string>
    <string name="confirm_btn_text">Potvrdi stanje</string>
    <string name="state_sent">Stanje uspješno poslano</string>
    <string name="ok_btn_text">U redu</string>
    <string name="date_time">Datum:\nVrijeme:</string>

    <string name="yes">Da</string>
    <string name="no">Ne</string>

    <!--  MENU ITEMS  -->
    <string name="nav_info_text">Info</string>
    <string name="nav_state_text">Stanje</string>
    <string name="nav_contact_text">Kontakt</string>
    <string name="nav_state_history_text">Povijest stanja</string>
    <string name="nav_logout_text">Odjava</string>

    <!--  NOTIFICATIONS  -->
    <string name="warning">Upozorenje!</string>
    <string name="distance_warning_message">Udaljeni ste više od 1km od mjesta prebivališta!</string>
    <string name="phone_number">Telefonski broj</string>
    <string name="calling_closest_epidemiologist">Pozivanje najbližeg epidemiologa!</string>
    <string name="copy_epidemiologist_number">Kopiraj broj epidemiologa</string>
    <string name="update_state">Potrebno je ažurirati stanje!</string>
    <string name="more_than_12_hours_passed">Proteklo je više od 12 sati od zadnjeg upisa stanja!</string>
    <string name="mute_alarm">Ugasi alarm</string>
</resources>
