<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_info"
        android:title="@string/nav_info_text" />
    <item
        android:id="@+id/nav_state"
        android:icon="@drawable/ic_medical_record"
        android:title="@string/nav_state_text" />
    <!--<item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/nav_contact_text" />-->
    <item
        android:id="@+id/nav_holder"
        android:title=""
        android:enabled="false" />
    <item
        android:id="@+id/nav_medical_records"
        android:icon="@drawable/ic_medical_records"
        android:title="@string/nav_medical_records_text" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout_text" />

</menu>