<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/nav_info_fragment">

    <fragment
        android:id="@id/nav_info_fragment"
        android:name="com.barisic.covid_19manager.fragments.InfoFragment"
        android:label="@string/nav_info_text"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@id/nav_state_fragment"
        android:name="com.barisic.covid_19manager.fragments.StanjePacijentaFragment"
        android:label="@string/nav_state_text"
        tools:layout="@layout/fragment_stanje_pacijenta" />
    <fragment
        android:id="@id/nav_state_history_fragment"
        android:name="com.barisic.covid_19manager.fragments.PovijestStanjaFragment"
        android:label="@string/nav_state_history_text"
        tools:layout="@layout/fragment_povijest_stanja" />
</navigation>