<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MainViewModel"
            type="com.barisic.covid_19manager.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogLayout"
        style="@style/WhiteDialogBackgroundStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".dialogs.LogoutDialogFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/TitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            style="@style/DialogButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->MainViewModel.cancelLogOut()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/logOutBtn"
            app:layout_constraintTop_toBottomOf="@id/message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logOutBtn"
            style="@style/DialogButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->MainViewModel.logOut()}"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>